Complete professional platform implementation
Features implemented:
- JWT authentication & admin login system
- Blog CMS with CRUD, pagination, search, SEO fields
- Image optimization with Sharp
- Email service (contact form, newsletter)
- Rate limiting & security (helmet, CORS, validation)
- Legal compliance pages (Privacy, Cookie, Terms)
- GDPR consent on contact form
- POS systems service added for retail businesses
- Docker deployment & CI/CD pipeline
- Professional documentation (README, QUICK_START)
- TypeScript compilation fixes
- Code cleanup & .gitignore updates

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,10 @@ out
 # Nuxt.js build / generate output
 .nuxt
 dist
+/backend/node_modules
+/backend/dist
+/backend/.env
+/backend/uploads
 
 # Gatsby files
 .cache/
